feat: add menu for blog

--- a/src/app/template/menu/container/menu.container.html
+++ b/src/app/template/menu/container/menu.container.html
@@ -1,32 +1,13 @@
 <dsv-menu>
-  <dsv-item
-    [small]="true"
-    icon="film"
-    text="Films"
-    url="/movie"
-    (callback)="closeMenu()"
-  ></dsv-item>
-  <dsv-item
-    [small]="true"
-    icon="tv"
-    text="Tv Shows"
-    url="/tv"
-    (callback)="closeMenu()"
-  ></dsv-item>
-  <dsv-item
-    [small]="true"
-    icon="user"
-    text="Personnes"
-    url="/person"
-    (callback)="closeMenu()"
-  ></dsv-item>
-  <dsv-item
-    [small]="true"
-    icon="file-list"
-    text="Listes"
-    url="/list"
-    (callback)="closeMenu()"
-  ></dsv-item>
+  @for (menu of menus(); track menu.url) {
+    <dsv-item
+      [small]="true"
+      [icon]="menu.icon"
+      [text]="menu.text"
+      [url]="menu.url"
+      (callback)="closeMenu()"
+    ></dsv-item>
+  }
   @if (isAdmin()) {
     <dsv-item
       [small]="true"
